add partly support drop & fix some bugs

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -22,6 +22,10 @@ svg{
 	flex-direction: column;
 	justify-content: center;	
 }
+p{
+	margin: 0;
+	color: #fff;
+}
 .page__title{
 	color: #e89e25;
 	margin: 50px 0 0;
