--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,10 @@ svg {
       -ms-flex-pack: center;
           justify-content: center; }
 
+p {
+  margin: 0;
+  color: #fff; }
+
 .page__title {
   color: #e89e25;
   margin: 50px 0 0; }
