--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -11,6 +11,7 @@ svg {
 	max-width: 100%;
 	height: auto;
 	vertical-align: middle;
+	-webkit-user-drag: none;
 }
 .center {
 	text-align: center;
@@ -65,6 +66,9 @@ p {
 	align-items: center;
 	touch-action: none;
 	user-select: none;
+	&2 .game_box{
+		width: 60px;
+	}
 }
 .game_board {
 	margin: 2px -3px;
@@ -76,10 +80,7 @@ p {
 }
 
 .game_box {
-	min-width: 75px;
-	min-height: 75px;
-	max-width: 75px;
-	max-height: 75px;
+	width: 75px;
 	margin: 3px;
 	display: block;
 }
@@ -92,16 +93,7 @@ p {
 		padding: 80px 0;
 	}
 	.game_box {
-		min-width: 70px;
-		min-height: 70px;
-		max-width: 70px;
-		max-height: 70px;
-	}
-	.elemImg {
-		min-width: 70px;
-		min-height: 70px;
-		max-width: 70px;
-		max-height: 70px;
+		width: 70px;
 	}
 }
 @media (max-width: 767px) {
@@ -113,23 +105,12 @@ p {
 		margin-bottom: 40px;
 	}
 
-	.game_line {
-		margin: -2px;
-		justify-content: center;
-	}
-
 	.game_box {
-		min-width: 30px;
-		min-height: 30px;
-		max-width: 30px;
-		max-height: 30px;
-		margin: 2px;
+		width: 40px;
+		margin: 3px;
 	}
 
-	.elemImg {
-		min-width: 30px;
-		min-height: 30px;
-		max-width: 30px;
-		max-height: 30px;
+	.game_line2 .game_box{
+		width: 30px;
 	}
 }
